# bachelor-thesis-project

./: .gitignore  Dockerfile  README.md  flake.nix  main.py  pyproject.toml
notebooks/: fuzzy_fmriprep_analysis.py  fuzzy_fmriprep_fc_matrices_analysis.py  fuzzy_fmriprep_graph_metrics_analysis.py  fuzzy_pca_dim_reduction_analysis.py  npvr_simulation.py  nvpr_simulation.py
notebooks/html/: npvr_simulation.html
res/: .gitignore
res/fuzzy-fmriprep-analysis/v1/fc-matrices/: metadata.json
res/fuzzy-fmriprep-analysis/v3/fc-matrices/: metadata.json
res/pca-dim-reduction/: network_assignments_446.txt  node_coords_446.npy
res/pca-dim-reduction/bmb/metadatas/: brain_pc_2.0_metadata.json  brain_pc_61.0_metadata.json  brain_pc_8.0_metadata.json
res/pca-dim-reduction/srbp/metadatas/: brain_pc_2.0_metadata.json  brain_pc_70.0_metadata.json
res/pca-dim-reduction/srbp/t-tests/: ttest_sex_fdr_bh_selected_features.csv
res/pca-dim-reduction/srpb/fuzzy-fc-matrices-impact/: fuzzy_fc_impact_stats.json
resources/: Alizadeh2025_connectivity_matrices_metrics_summary.md  Alizadeh2025_paper_summary.md  Alizadeh2025_summary.md
resources/alizadeh-2025-paper-summary/: Alizadeh2025_connectivity_matrices_metrics_summary.md  Alizadeh2025_paper_summary.md  Alizadeh2025_preprocessing_explanation.md
resources/connectivity-analysis-pipeline/: overview.md
scripts/: get_sub_filename_by_common_lab.nu  group_sub_by_common_lab.nu  parallel_jobs.sh  run_fmriprep.slurm  sequential_jobs.sh
scripts/pbs/: config.sh  run_job.sh  run_parallel_jobs.sh
(+370 files in other folders)
